--- a/electrical-company/package.json
+++ b/electrical-company/package.json
@@ -2,6 +2,8 @@
 	"name": "electrical-company",
 	"version": "1.0.0",
 	"dependencies": {
+		"dotenv": "^16.4.5",
+		"handlebars": "^4.7.8",
 		"tctx": "^0.2.3"
 	},
 	"devDependencies": {
