--- a/classical-composers/backend/package.json
+++ b/classical-composers/backend/package.json
@@ -21,7 +21,11 @@
 	"dependencies": {
 		"@nestjs/common": "^10.3.2",
 		"@nestjs/core": "^10.3.2",
+		"@nestjs/mapped-types": "*",
 		"@nestjs/platform-express": "^10.3.2",
+		"@nestjs/swagger": "^7.4.2",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
 		"reflect-metadata": "^0.2.1",
 		"rxjs": "^7.8.1",
 		"tctx": "^0.2.3"
